revise controllerservice test
add more type specific tests and classes.